--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "dev": "run-p backend:dev frontend:dev",
     "start": "npm run start --workspace=@app-x/backend",
-    "deploy": "npm ci && run-s clean build:prod start:check",
+    "deploy": "npm ci --package-lock-=false && run-s clean build:prod start:check",
     "build:dev": "run-s backend:build:dev frontend:build:dev",
     "build:prod": "run-s backend:build:prod frontend:build:prod",
     "clean:all": "rimraf build dist node_modules",
@@ -29,7 +29,7 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.10"
   },
   "engines": {
     "node": ">=22.11.0",
