--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,10 +11,12 @@
     "build:prod": "webpack -c ../../packages/webpack-config/prod.js",
     "dev:simple": "webpack serve --config ../../packages/webpack-config/dev.js",
     "lint:js": "eslint ./src",
+    "lint:vue": "eslint ./src --ext .js,.vue",
     "lint-staged": "lint-staged"
   },
   "lint-staged": {
-    "*.js": "eslint"
+    "*.js": "eslint --max-warnings 2",
+    "*.vue": "eslint --max-warnings 2"
   },
   "eslintConfig": {
     "extends": [
