--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "typeRoots": ["./node_modules/@types", "./types"],
-    "target": "ES2020",
+    "target": "es2022",
     "module": "ESNext",
     "moduleResolution": "node",
     "outDir": "../../build/server",
