--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -35,6 +35,7 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "socket.io-client": "4.8.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vuex": "^4.1.0"
