--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -46,6 +46,7 @@
     "@types/cookie-parser": "1.4.9",
     "@types/express": "^5.0.0",
     "@types/node": "^24.1.0",
+    "jest": "30.1.1",
     "typescript": "^5.8.0"
   }
 }
