--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,7 +21,8 @@
     "ts:prod": "tsc",
     "babel:prod": "babel -d ../../dist/server ../../build/server --delete-dir-on-start",
     "lint:js": "eslint ./src",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "lint-staged": {
     "*.js": "eslint"
@@ -45,8 +46,10 @@
   "devDependencies": {
     "@types/cookie-parser": "1.4.9",
     "@types/express": "^5.0.0",
+    "@types/jest": "30.0.0",
     "@types/node": "^24.1.0",
     "jest": "30.1.1",
+    "ts-jest": "29.4.1",
     "typescript": "^5.8.0"
   }
 }
