--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "backend:build:dev": "npm run build:dev --workspace=@app-x/backend",
     "frontend:build:dev": "npm run build:dev --workspace=@app-x/frontend",
     "backend:build:prod": "npm run build:prod --workspace=@app-x/backend",
-    "frontend:build:prod": "npm run build:prod --workspace=@app-x/frontend"
+    "frontend:build:prod": "npm run build:prod --workspace=@app-x/frontend",
+    "test": "npm run test --workspace=@app-x/backend"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
