--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -40,16 +40,16 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "socket.io": "4.8.1",
-    "zod": "3.25.76"
+    "socket.io": "^4.8.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/cookie-parser": "1.4.9",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.0",
-    "@types/jest": "30.0.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
-    "jest": "30.1.1",
-    "ts-jest": "29.4.1",
+    "jest": "^30.1.1",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.8.0"
   }
 }
