--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -15,8 +15,8 @@
     "node.json"
   ],
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "8.41.0",
-    "@typescript-eslint/parser": "8.41.0",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
