ci: Fixed deploy problems

--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "scripts": {
     "dev": "run-p backend:dev frontend:dev",
     "start": "npm run start --workspace=@app-x/backend",
-    "deploy": "npm ci --package-lock-=false && run-s clean build:prod start:check",
+    "deploy": "npm run ci:dev && run-s test clean build:prod ci:prod start:tmp",
+    "ci:dev": "npm ci --package-lock-=false",
+    "ci:prod": "npm ci --package-lock-=false --omit=dev",
     "build:dev": "run-s backend:build:dev frontend:build:dev",
     "build:prod": "run-s backend:build:prod frontend:build:prod",
     "clean:all": "rimraf build dist node_modules",
     "clean": "rimraf build dist",
     "look": "run-s frontend:build:dev backend:build:dev backend:look",
     "backend:look": "npm run look --workspace=@app-x/backend",
-    "start:check": "npm run start -- -- --check",
+    "start:tmp": "npm run start -- -- --tmp",
     "backend:dev": "npm run dev --workspace=@app-x/backend",
     "frontend:dev": "npm run dev:simple --workspace=@app-x/frontend",
     "backend:build:dev": "npm run build:dev --workspace=@app-x/backend",
