--- a/packages/webpack-config/package.json
+++ b/packages/webpack-config/package.json
@@ -23,6 +23,7 @@
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0",
-    "webpack-merge": "^6.0.1"
+    "webpack-merge": "^6.0.1",
+    "webpack-plugin-vuetify": "^3.1.2"
   }
 }
