--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -40,6 +40,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "libphonenumber-js": "^1.12.27",
     "socket.io": "^4.8.1",
     "zod": "^3.25.76"
   },
