Configured: ts enable source map

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -12,7 +12,7 @@
     "noEmitOnError": true,
     "noEmit": false,
     "allowJs": false,
-    "sourceMap": false,
+    "sourceMap": true,
     "declarationMap": false,
     "declaration": false,
     "skipLibCheck": true
