ci: Added: env file for test server

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,7 @@
 NODE_ENV=development
 APP_ORIGIN=http://localhost:8004
+APP_WEBSOCK=ws://localhost:7004
+APP_WS_PORT=7004
 APP_BE_PORT=8004
 APP_BE_COMMENT="BACKEND STARTED IN DEVELOPMENT MODE"
 APP_FE_COMMENT="FRONTEND STARTED IN DEVELOPMENT MODE"
