--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,7 @@
 NODE_ENV=production
 APP_ORIGIN=https://app-things.web-app.click
+APP_WEBSOCK=wss://wss.app-things.web-app.click:7704
+APP_WS_PORT=7704
 APP_BE_PORT=8804
 APP_BE_COMMENT="BACKEND STARTED IN PRODUCTION MODE"
 APP_FE_COMMENT="FRONTEND STARTED IN PRODUCTION MODE"
