--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "test": "npm run test --workspace=@app-x/backend"
   },
   "devDependencies": {
+    "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^6.0.1",
-    "nodemon": "^3.1.10"
+    "prettier": "^3.6.2",
+    "rimraf": "^6.0.1"
   },
   "engines": {
     "node": ">=22.11.0",
