ci: Implemented deploy test environment

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon --watch \"../../packages/webpack-config/\" --exec \"webpack serve --config ../../packages/webpack-config/dev.js\"",
     "build:dev": "webpack -c ../../packages/webpack-config/dev.js",
     "build:prod": "webpack -c ../../packages/webpack-config/prod.js",
+    "build:test": "webpack -c ../../packages/webpack-config/test.js",
     "dev:simple": "webpack serve --config ../../packages/webpack-config/dev.js",
     "lint:js": "eslint ./src",
     "lint:vue": "eslint ./src --ext .js,.vue",
