--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,6 @@
 NODE_ENV=test
-APP_ORIGIN=https://test.app-things.web-app.click
-APP_WEBSOCK=wss://wss.test.app-things.web-app.click:5504
+APP_ORIGIN=http://app-things.web-app.test
+APP_WEBSOCK=ws://wss.app-things.web-app.test:5504
 APP_WS_PORT=5504
 APP_BE_PORT=6604
 APP_BE_COMMENT="BACKEND STARTED IN TEST MODE"
