--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "run-p nm ts",
     "start": "node --env-file=../../.env.prod ../../dist/server/main.js",
+    "start:test": "node --env-file=../../.env.test ../../dist/server/main.js",
     "build:dev": "run-s clean ts:dev static:dev",
     "build:prod": "run-s clean ts:prod babel:prod static:prod",
     "look": "nodemon --env-file=../../.env.dev ../../build/server/main.js",
