--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "npm run start --workspace=@app-x/backend",
     "start:test": "npm run start:test --workspace=@app-x/backend",
     "deploy": "npm run ci:dev && run-s test clean build:prod ci:prod start:tmp",
-    "d:test": "npm run ci:dev && run-s test clean build:test ci:prod start:tmp",
+    "deploy:test": "npm run ci:dev && run-s test clean build:test ci:prod start:test:tmp",
     "ci:dev": "npm ci --package-lock-=false",
     "ci:prod": "npm ci --package-lock-=false --omit=dev",
     "build:dev": "run-s backend:build:dev frontend:build:dev",
@@ -24,6 +24,7 @@
     "look": "run-s frontend:build:dev backend:build:dev backend:look",
     "backend:look": "npm run look --workspace=@app-x/backend",
     "start:tmp": "npm run start -- -- --tmp",
+    "start:test:tmp": "npm run start:test -- -- --tmp",
     "backend:dev": "npm run dev --workspace=@app-x/backend",
     "frontend:dev": "npm run dev:simple --workspace=@app-x/frontend",
     "backend:build:dev": "npm run build:dev --workspace=@app-x/backend",
