--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,13 +11,13 @@
     "build:dev": "run-s clean ts:dev static:dev",
     "build:prod": "run-s clean ts:prod babel:prod static:prod",
     "look": "nodemon --env-file=../../.env.dev ../../build/server/main.js",
-    "ts": "tsc --watch",
+    "ts": "tsc --rootDir ./src --watch",
     "nm": "nodemon --watch ../../build/server --watch ../../.env.dev --env-file=../../.env.dev ../../build/server/main.js",
     "clean": "rimraf ../../build/server",
     "static:dev": "cp -R ./static ../../build/server/static",
     "static:prod": "cp -R ./static ../../dist/server/static",
-    "ts:dev": "tsc --sourceMap --declaration --declarationMap",
-    "ts:prod": "tsc",
+    "ts:dev": "tsc --rootDir ./src --sourceMap --declaration --declarationMap",
+    "ts:prod": "tsc --rootDir ./src --sourceMap false",
     "babel:prod": "babel -d ../../dist/server ../../build/server --delete-dir-on-start --copy-files",
     "lint:js": "eslint ./src",
     "lint-staged": "lint-staged",
