fe: Changed jsconfig.json

--- a/apps/frontend/jsconfig.json
+++ b/apps/frontend/jsconfig.json
@@ -3,13 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    },
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "allowJs": true,
-    "isolatedModules": true
+    }
   },
-  "include": ["src/**/*", "src/**/*.vue"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src"]
 }
