--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -48,7 +48,9 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
+    "@types/supertest": "^6.0.3",
     "jest": "^30.1.1",
+    "supertest": "^7.2.2",
     "ts-jest": "^29.4.1",
     "typescript": "^5.8.0"
   }
