--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "typeRoots": ["../../node_modules/@types", "./types"],
-    "types": ["jest", "node"],
+    "typeRoots": ["../../node_modules/@types", "../../node_modules", "./types"],
+    "types": ["vitest/globals", "node"],
     "target": "es2022",
     "module": "ESNext",
     "moduleResolution": "node",
@@ -22,6 +22,6 @@
     "noImplicitAny": false,
     "removeComments": true
   },
-  "include": ["src"],
+  "include": ["spec", "src"],
   "exclude": ["node_modules", "build", "dist", "frontend/**/*"]
 }
